--- a/index.html
+++ b/index.html
@@ -31,24 +31,31 @@
 }
 </style>
 
+
     <h1 class="h1 text-center">Users API</h1>
     <div class="row wrapper border">
          <div class="users col-4 border">
             <h3 class="h3">Users</h3>
                 <div id="users__info">Count of users: </div>
-                <!-- users JS -->
+                <div class="wrap__us">
+                    <!-- users JS -->
+                </div>
         </div> 
 
         <div class="posts col-4 border">
             <h3 class="h3">Posts</h3>
             <div id="info__post">Count of posts: </div>
-            <!-- posts JS -->
+            <div class="wrap__post">
+                <!-- posts JS -->
+            </div>
         </div>
 
         <div class="comments col-4 border">
             <h3 class="h3">Comments</h3>
             <div id="com__info">Count of comments: </div>
-            <!-- comment JS -->
+            <div class="wrap__com">
+                <!-- comment JS -->
+            </div>
         </div>
     </div>
 
